# pwnage-checker

./: .gitignore  Cargo.toml  README.md
src/: binary_search.rs  lib.rs  main.rs  password_downloader.rs
