[package]
name = "pwnage_checker"
version = "1.0.0"
authors = ["Sebastian Magnusson <sebbe.magnusson@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
sha1 = "0.10.6"
hex = "0.4.3"

# Standard error handling libraries
thiserror = "2.0"   # For defining error types
anyhow = "1.0"      # For error context and propagation

# Optional but recommended
tracing-error = "0.2.1"   # For error tracing
miette = "6.0"          # For diagnostic error reporting

[dependencies.reqwest]
version = "0.13.2"
features = ["blocking"]
